# esp32c3-led-software

./: CMakeLists.txt  Cargo.toml  errors.txt  other_solution.rs
src/: main.rs
