[package]
name = "esp32c3-led-software"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow      = "=1.0.75"
esp-idf-svc = "=0.47.3"
rgb-led     = { path = "../../common/lib/rgb-led" }

[build-dependencies]
embuild = "=0.31.4"